# NetSpeed

./: CMakeLists.txt  Doxyfile  LICENSE  ProgressLabel.cpp  ProgressLabel.h  README.en_US.md  README.md  README.zh_TW.md  SettingModel.cpp  SettingModel.h  WinDesktop.cpp  WinDesktop.h  WinHoverNet.cpp  WinHoverNet.h  WinHoverNet.h.autosave  WinSetting.cpp  WinSetting.h  WinSetting.ui  WinSetting.ui.autosave  WinTransparent.cpp  WinTransparent.h  config.json  initConfig.json  lfxNet(副本).json  lfxNet.json  lfx_global.h  main.cpp  resources.qrc
dde-dock-plugin/: CMakeLists.txt  MonitorNet.json  MonitorNetConfig.json  NetPlugin.cpp  NetPlugin.h  NetPlugins.json  README.en_US.md  README.md  README.zh_TW.md  SettingModel.cpp  SettingModel.h  WinDdeDockSetting.cpp  WinDdeDockSetting.h  WinDdeDockSetting.ui  WinDdeDockSetting.ui.autosave  WinDockNet.cpp  WinDockNet.h  WinDockNet.ui  WinSetting.ui  config.json  resourcs.qrc
debian/: README.Debian  README.source  changelog  control  copyright
dockplugin/: CMakeLists.txt  NetPlugin.cpp  NetPlugin.h
lib/: CMakeLists.txt  MonitorInfo.cpp  MonitorInfo.h  MonitorInfo_x11.cpp  MonitorInfo_x11.h
resource/: NetSpeed.desktop
resource/data/: NetSpeed.json
translations/: zh_CN.ts  zh_TW.ts
widgets/: WinAbout.cpp  WinAbout.h  WinAbout.ui  WinDockNet.cpp  WinDockNet.h  WinDockNet.ui  WinDockTest.cpp  WinDockTest.h  WinDockTest.ui  WinSetting.cpp  WinSetting.h  WinSetting.ui
